--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     
   </head>
 <body>
-  <script type="text/javascript" src="/index.js"></script>
+  <script type="text/javascript" src="https://meomaymap.github.io/TBTP/index.js"></script>
 
 
 </body>
