--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
 <body>
   <div>Quang</div>
+  <input type="button" value="Click me" onclick="gotosite()">
   <script type="text/javascript" src="https://meomaymap.github.io/TBTP/index.js"></script>
 
 
