--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	 
 		
 		<div id="myOverlay" class="overlay">
-				<iframe class="iFrame_content" id="myFrame" src="https://script.google.com/macros/s/AKfycby7xOajlwfyrlDp0vR-3mxXC5O95s5uPbh3cz8C/exec?action=15"></iframe>
+				<iframe class="iFrame_content" id="myFrame" src=""></iframe>
 		</div>
 
 
