--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
 
 	 
 		
-		<div id="myOverlay" class="overlay">
+		<div id="myOverlay" class="overlay" style="display:none">
 				<iframe class="iFrame_content" id="myFrame" src=""></iframe>
+		</div>
+	<div id="KhoaManhinh" class="overlay" style="display:none">
+				Tính năng sử dụng máy theo chiều ngang đã bị khóa
 		</div>
 
 
