--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 	 <div id="KhoaManhinh" class="overlay" style="display:none">
-		 <p>Tính năng sử dụng máy theo chiều ngang đã bị khóa</p>
+		 <p class="info">Tính năng sử dụng máy theo chiều ngang đã bị khóa</p>
 		</div>
 		
 		<div id="myOverlay" class="overlay" style="display:none">
