--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-
+	<div class="container">
 	 <div id="KhoaManhinh" class="overlay" style="display:none">
 		 <p>Tính năng sử dụng máy theo chiều ngang đã bị khóa</p>
 		</div>
@@ -22,7 +22,7 @@
 				<iframe class="iFrame_content" id="myFrame" src=""></iframe>
 		</div>
 	
-
+	</div>
 
 
 </body>
