--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 		
-		<div id="myOverlay" class="overlay" style="display:none">
+		<div id="myOverlay" class="overlay">
 				<iframe class="iFrame_content" id="myFrame" src=""></iframe>
 		</div>
 	
