--- a/Parent.html
+++ b/Parent.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<iframe src="iframe.html" width="300" height="300"></iframe>
+<iframe src="https://meomaymap.github.io/TBTP/iframe.html" width="300" height="300"></iframe>
 
 <script type="text/javascript">
 	var eventMethod = window.addEventListener
