--- a/Parent.html
+++ b/Parent.html
@@ -18,7 +18,7 @@
 
 	eventer(messageEvent, function (e) {
 		
-		if (e.origin !== 'https://meomaymap.github.io/TBTP/iframe.html') return;
+		//if (e.origin !== 'https://meomaymap.github.io/TBTP/iframe.html') return;
 		
 		if (e.data === "myevent" || e.message === "myevent") 
 			alert('Message from iframe just came!');
