--- a/Parent.html
+++ b/Parent.html
@@ -22,6 +22,7 @@
 		
 		if (e.data === "myevent" || e.message === "myevent") 
 			alert('Message from iframe just came!');
+		        alert(e.origin);
 		
 		console.log(e);
 	});
