--- a/Parent.html
+++ b/Parent.html
@@ -20,11 +20,12 @@
 		
 		if (e.origin !== 'https://meomaymap.github.io') return;
 		
-		if (e.data === "myevent" || e.message === "myevent") 
+		//if (e.data === "myevent" || e.message === "myevent") 
 			alert('Message from iframe just came!');
+		alert(e.data);
 			alert(e.message);
 		
-		console.log(e);
+		//console.log(e);
 	});
 </script>
 </body>
