--- a/Parent.html
+++ b/Parent.html
@@ -21,8 +21,8 @@
 		if (e.origin !== 'https://meomaymap.github.io') return;
 		
 		//if (e.data === "myevent" || e.message === "myevent") 
-			alert('Message from iframe just came!');
-		alert(e.data);
+			//alert('Message from iframe just came!');
+		//alert(e.data);
 			alert(e.message);
 		
 		//console.log(e);
