--- a/Parent.html
+++ b/Parent.html
@@ -22,8 +22,8 @@
 		
 		//if (e.data === "myevent" || e.message === "myevent") 
 			//alert('Message from iframe just came!');
-		//alert(e.data);
-			alert(e.message);
+		alert(e.data);
+			//alert(e.message);
 		
 		//console.log(e);
 	});
