--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -52,9 +52,9 @@
 	</head>
 
 	<body>
-		<a id="main-link" href="https://gitlab.com/catamphetamine/read-excel-file">
+		<!--<a id="main-link" href="https://gitlab.com/catamphetamine/read-excel-file">
 			read-excel-file
-		</a>
+		</a><-->
 
 		<input type="file" id="input" />
 
