--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -18,7 +18,7 @@
             var json_object = JSON.stringify(XL_row_object);
             //console.log(JSON.parse(json_object));
             //jQuery( '#xlx_json' ).val( json_object );
-            jQuery( '#xlx_json' ).val( "Quang");
+            jQuery( '#xlx_json' ).val( json_object[0][0]);
           })
         };
 
