--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -2,7 +2,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/jszip.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/xlsx.js"></script>
 <script>
-    //var slag;
+    var slag;
     var ExcelToJSON = function() {
 
       this.parseExcel = function(file) {
@@ -19,8 +19,8 @@
             var json_object = JSON.stringify(XL_row_object);
             //console.log(JSON.parse(json_object));
             //jQuery( '#xlx_json' ).val( json_object );
-              //slag = json.records.map(doc => Object.values(doc));
-            jQuery( '#xlx_json' ).val(json_object);
+              slag = json_object.records.map(doc => Object.values(doc));
+            jQuery( '#xlx_json' ).val(slag[0][0]);
           })
         };
 
