--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -20,7 +20,7 @@
             //console.log(JSON.parse(json_object));
             //jQuery( '#xlx_json' ).val( json_object );
              slag = JSON.parse(json_object);
-            jQuery( '#xlx_json' ).val(json_object);
+            jQuery( '#xlx_json' ).val(slag.STT[0]);
           })
         };
 
