--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -19,8 +19,8 @@
             var json_object = JSON.stringify(XL_row_object);
             //console.log(JSON.parse(json_object));
             //jQuery( '#xlx_json' ).val( json_object );
-             slag = JSON.parse(json_object);
-            jQuery( '#xlx_json' ).val(json_object);
+             slag = json_object.map(doc => Object.values(doc));
+            jQuery( '#xlx_json' ).val(slag);
           })
         };
 
