--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -20,8 +20,8 @@
             //console.log(JSON.parse(json_object));
             //jQuery( '#xlx_json' ).val( json_object );
              //slag = json_object.map(doc => Object.values(doc));
-              slag = json_object.values(JSON.parse(string))
-            jQuery( '#xlx_json' ).val(slag);
+              //slag = json_object.values(JSON.parse(string))
+            jQuery( '#xlx_json' ).val(Object.values(json_object[0]);
           })
         };
 
