--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -21,7 +21,8 @@
             //jQuery( '#xlx_json' ).val( json_object );
              //slag = json_object.map(doc => Object.values(doc));
               //slag = json_object.values(JSON.parse(string))
-            jQuery( '#xlx_json' ).val(Object.values(json_object[0]);
+              slag = object.values(JSON.parse(json_object))
+            jQuery( '#xlx_json' ).val(slag[0][1]);
           })
         };
 
