--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -21,8 +21,8 @@
             //jQuery( '#xlx_json' ).val( json_object );
              //slag = json_object.map(doc => Object.values(doc));
               //slag = json_object.values(JSON.parse(string))
-              slag = Object.values(JSON.parse(json_object))
-            jQuery( '#xlx_json' ).val(slag[0][1]);
+              //slag = Object.values(JSON.parse(json_object))
+            jQuery( '#xlx_json' ).val(json_object);
           })
         };
 
