--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -29,7 +29,7 @@
               //  Object.values(element).forEach((r) => { slag.push(r) });
              //}
               
-            jQuery( '#xlx_json' ).val(qqq[0][3]);
+            jQuery( '#xlx_json' ).val(qqq);
           })
         };
 
