--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -19,17 +19,13 @@
             var json_object = JSON.stringify(XL_row_object);
             //console.log(JSON.parse(json_object));
             //jQuery( '#xlx_json' ).val( json_object );
-             //slag = json_object.map(doc => Object.values(doc));
-              //slag = json_object.values(JSON.parse(string))
-              slag = JSON.parse(json_object);
+
+              //slag = JSON.parse(json_object);
               
-              const qqq = slag.map((m) => { return Object.values(m); });
-              //for (let i= 0; i < json_object.length; i += 1) {
-              //  const element = json_object[i];
-              //  Object.values(element).forEach((r) => { slag.push(r) });
-             //}
+              //const qqq = slag.map((m) => { return Object.values(m); });
               
             jQuery( '#xlx_json' ).val(qqq[499998][3]);
+              jQuery( '#xlx_json' ).val("Quang");
           })
         };
 
