--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -24,7 +24,7 @@
               
               //const qqq = slag.map((m) => { return Object.values(m); });
               
-            jQuery( '#xlx_json' ).val(qqq[499998][3]);
+            //jQuery( '#xlx_json' ).val(qqq[499998][3]);
               jQuery( '#xlx_json' ).val("Quang");
           })
         };
