--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -20,12 +20,12 @@
             //console.log(JSON.parse(json_object));
             //jQuery( '#xlx_json' ).val( json_object );
 
-              //slag = JSON.parse(json_object);
+              slag = JSON.parse(json_object);
               
-              //const qqq = slag.map((m) => { return Object.values(m); });
+              const qqq = slag.map((m) => { return Object.values(m); });
               
-            //jQuery( '#xlx_json' ).val(qqq[499998][3]);
-              jQuery( '#xlx_json' ).val("Quang");
+            jQuery( '#xlx_json' ).val(qqq[499998][3]);
+             // jQuery( '#xlx_json' ).val("Quang");
           })
         };
 
