--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -15,8 +15,10 @@
           });
           workbook.SheetNames.forEach(function(sheetName) {
             // Here is your object
-            var XL_row_object = XLSX.utils.sheet_to_row_object_array(workbook.Sheets[sheetName]);
-            var json_object = JSON.stringify(XL_row_object);
+            //var XL_row_object = XLSX.utils.sheet_to_row_object_array(workbook.Sheets[sheetName]);
+            //var json_object = JSON.stringify(XL_row_object);
+            var json_object =  XLSX.utils.sheet_to_json(workbook.Sheets[sheetName]);
+              
             //console.log(JSON.parse(json_object));
             //jQuery( '#xlx_json' ).val( json_object );
 
