--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -26,8 +26,8 @@
               
               const qqq = slag.map((m) => { return Object.values(m); });
               
-            //jQuery( '#xlx_json' ).val(qqq[0][3]);
-            jQuery( '#xlx_json' ).val(json_object[0]["STT"]);
+            jQuery( '#xlx_json' ).val(qqq[0][3]);
+            //jQuery( '#xlx_json' ).val(json_object[0]["STT"]);
 
           })
         };
