--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -27,7 +27,7 @@
               const qqq = slag.map((m) => { return Object.values(m); });
               
             //jQuery( '#xlx_json' ).val(qqq[0][3]);
-            jQuery( '#xlx_json' ).val(Object.keys(json_object));
+            jQuery( '#xlx_json' ).val(Object.keys(slag[0]));
 
           })
         };
