--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -52,7 +52,8 @@
 
   function ExportData()
     {
-            filename='reports.xlsx';
+        alert(1);    
+        filename='reports.xlsx';
        data=[{Market: "IN", New Arrivals: "6", Upcoming Appointments: "2", Pending - 1st Attempt: "4"},
             {Market: "KS/MO", New Arrivals: "4", Upcoming Appointments: "4", Pending - 1st Attempt: "2"},
             {Market: "KS/MO", New Arrivals: "4", Upcoming Appointments: "4", Pending - 1st Attempt: "2"},
@@ -61,18 +62,20 @@
         var wb = XLSX.utils.book_new();
         XLSX.utils.book_append_sheet(wb, ws, "People");
         XLSX.writeFile(wb,filename);
+        (alert(2);
      }
  
 </script>
 
 <form enctype="multipart/form-data">
     <input id="upload" type=file  name="files[]">
-    <input type="button" value="Click me" onclick="ExportData()">
+    <input id="download" type="button" value="Click me">
 </form>
 
     <textarea class="form-control" rows=35 cols=120 id="xlx_json"></textarea>
 
     <script>
         document.getElementById('upload').addEventListener('change', handleFileSelect, false);
+        document.getElementById('upload').addEventListener('click', ExportData, false);
 
     </script>
