--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -76,6 +76,6 @@
 
     <script>
         document.getElementById('upload').addEventListener('change', handleFileSelect, false);
-        document.getElementById('upload').addEventListener('click', ExportData, false);
+        document.getElementById('download').addEventListener('click', ExportData, false);
 
     </script>
