--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -32,6 +32,8 @@
             //jQuery( '#xlx_json' ).val(Object.keys(slag[0])[3]);
               jQuery( '#xlx_json' ).val(slag[0][Object.keys(slag[0])[1]]);
             //ok
+              
+              ExportData();
           })
         };
 
