--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -64,7 +64,7 @@
         var wb = XLSX.utils.book_new();
         XLSX.utils.book_append_sheet(wb, ws, "People");
         XLSX.writeFile(wb,filename);
-        (alert(2);
+        alert(2);
      }
  
 </script>
