--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -33,7 +33,7 @@
               jQuery( '#xlx_json' ).val(slag[0][Object.keys(slag[0])[1]]);
             //ok
               
-              ExportData();
+              //ExportData();
           })
         };
 
