--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -78,6 +78,6 @@
 
     <script>
         document.getElementById('upload').addEventListener('change', handleFileSelect, false);
-        document.getElementById('download').addEventListener('click', ExportData, false);
+        //document.getElementById('download').addEventListener('click', ExportData, false);
 
     </script>
