--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -24,7 +24,7 @@
 
               slag = JSON.parse(json_object);
               
-              const qqq = slag.map((m) => { return Object.values(m); });
+              //const qqq = slag.map((m) => { return Object.values(m); });
               
               //ok
             //jQuery( '#xlx_json' ).val(qqq[0][3]);
@@ -71,7 +71,6 @@
 
 <form enctype="multipart/form-data">
     <input id="upload" type=file  name="files[]">
-    <input id="download" type="button" value="Click me">
 </form>
 
     <textarea class="form-control" rows=35 cols=120 id="xlx_json"></textarea>
