--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -1,6 +1,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/jszip.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/xlsx.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/xlsx.js"></script>-->
+<script src="https://rawgit.com/SheetJS/js-xlsx/master/dist/xlsx.full.min.js"></script>
 <script>
     var slag;
     var ExcelToJSON = function() {
@@ -34,7 +35,7 @@
              jQuery( '#xlx_json' ).val(slag[0][Object.keys(slag[0])[1]]);
             //ok
               
-              ExportData();
+              //ExportData();
           })
         };
 
