--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -94,7 +94,7 @@ XLSX.writeFile(wb, "sheetjs.xlsx");
 
 <form enctype="multipart/form-data">
     <input id="upload" type=file  name="files[]">
-    <input type="button" value="Click me" onclick="ExportData()">
+    <input type="button" value="Click me" onclick="ExportData1()">
 </form>
 
     <textarea class="form-control" rows=35 cols=120 id="xlx_json"></textarea>
