--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -38,7 +38,7 @@
               
           })
             
-          ExportData();  
+          //ExportData();  
         };
 
         reader.onerror = function(ex) {
