--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -56,7 +56,7 @@
     xl2json.parseExcel(files[0]);
   }
 
-  function ExportData(data) { 
+  function ExportData() { 
 //      var data = [
 //    {"name":"John", "city": "Seattle"},
 //    {"name":"Mike", "city": "Los Angeles"},
