--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, height=device-height, maximum-scale=1.0, initial-scale=1">
 
-<link rel="stylesheet" href="https://meomaymap.github.io/TBTP/index.css">
+<link rel="stylesheet" href="index.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script type="text/javascript" src="https://meomaymap.github.io/TBTP/index.js"></script>
 	
