--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <link rel="stylesheet" href="index.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-  <script type="text/javascript" src="https://meomaymap.github.io/TBTP/index.js"></script>
+  <script type="text/javascript" src="index.js"></script>
 	
   
 
