--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, height=device-height, maximum-scale=1.0, initial-scale=1">
 
-<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="/index.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-  <script type="text/javascript" src="index.js"></script>
+  <script type="text/javascript" src="/index.js"></script>
 	
   
 
