--- a/iframe.html
+++ b/iframe.html
@@ -9,7 +9,7 @@
 
 <script type="text/javascript">
 	document.querySelector('button').onclick = function () {
-		parent.postMessage("message to be sent", "https://meomaymap.github.io/TBTP/Parent.html")
+		parent.postMessage("myevent", "https://meomaymap.github.io/TBTP/Parent.html")
 		//parent.postMessage("myevent", "*")
 	};
 </script>
