--- a/Parent.html
+++ b/Parent.html
@@ -20,7 +20,7 @@
 		
 		if (e.origin !== 'https://meomaymap.github.io') return;
 		
-		//if (e.data === "myevent" || e.message === "myevent") 
+		if (e.data === "myevent" || e.message === "myevent") 
 			//alert('Message from iframe just came!');
 		//alert(e.data);
 			alert(e.message);
