--- a/iframe.html
+++ b/iframe.html
@@ -9,8 +9,8 @@
 
 <script type="text/javascript">
 	document.querySelector('button').onclick = function () {
-		parent.postMessage("myevent", "https://meomaymap.github.io/TBTP/Parent.html")
-		//parent.postMessage("myevent", "*")
+		// parent.postMessage("message to be sent", "http://the-website-that-will-receive-the-msg.com")
+		parent.postMessage("myevent", "*")
 	};
 </script>
 
