--- a/Parent.html
+++ b/Parent.html
@@ -18,12 +18,12 @@
 
 	eventer(messageEvent, function (e) {
 		
-		if (e.origin !== 'https://meomaymap.github.io') return;
+		//if (e.origin !== 'https://meomaymap.github.io') return;
 		
 		if (e.data === "myevent" || e.message === "myevent") 
-			//alert('Message from iframe just came!');
+			alert('Message from iframe just came!');
 		//alert(e.data);
-			alert(e.message);
+			//alert(e.message);
 		
 		//console.log(e);
 	});
