--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 		
 		<div id="myOverlay" class="overlay">
-				<iframe class="iFrame_content" id="myFrame" src="" sandbox=""></iframe>
+				<iframe class="iFrame_content" id="myFrame" src=""></iframe>
 		</div>
 	
 
