--- a/ReadExcel.html
+++ b/ReadExcel.html
@@ -30,8 +30,8 @@
               //ok
             //jQuery( '#xlx_json' ).val(qqq[0][3]);
               
-              //jQuery( '#xlx_json' ).val(Object.keys(slag[0]));
-            jQuery( '#xlx_json' ).val(Object.keys(slag[0])[3]);
+              jQuery( '#xlx_json' ).val(Object.keys(slag[0]));
+            //jQuery( '#xlx_json' ).val(Object.keys(slag[0])[3]);
             // jQuery( '#xlx_json' ).val(slag[0][Object.keys(slag[0])[1]]);
             //ok
               
