--- a/testQ.html
+++ b/testQ.html
@@ -9,9 +9,10 @@
 .module {
   height: 100vh; /* Use vh as a fallback for browsers that do not support Custom Properties */
   height: calc(var(--vh, 1vh) * 100);
-  margin: 0 auto;
+  /*margin: 0 auto;
   max-width: 30%;
 	background-color: green;
+	*/
 }
 
 .module__item {
