--- a/embed.html
+++ b/embed.html
@@ -19,7 +19,7 @@
     function authSuccess(email){
         console.log(email);
         // Hide auth prompt overlay
-        document.querySelector('.loggedOut').style.display = 'none';
+        //document.querySelector('.loggedOut').style.display = 'none';
     }
     document.querySelectorAll('.authButton').forEach(function(elem){
         elem.addEventListener('click',function(evt){
