--- a/childchat.html
+++ b/childchat.html
@@ -42,10 +42,11 @@
   <script>
     // Receive-loop
       
-
+    var loop=true;
+      
     async function receiveLoop(btn) {
       your_id.disabled = peer_id.disabled = btn.disabled = true;
-      while(true) {
+      while(loop==true) {
         try {
           // Get peer's response
           const res = await fetch(`https://ppng.io/${peer_id.value}-${your_id.value}`);
