--- a/Q_local_2.html
+++ b/Q_local_2.html
@@ -8,14 +8,14 @@
 <p id="demo"></p>
 
 <script>
-window.addEventListener("storage", myFunction);
+//window.addEventListener("storage", myFunction);
 
-function myFunction(event) {
-  document.getElementById("demo").innerHTML = "A change was made in the storage area";
-}
+//function myFunction(event) {
+//  document.getElementById("demo").innerHTML = "A change was made in the storage area";
+//}
 
 function changeValue() {
-  localStorage.setItem("mytime", Date.now());
+  localStorage.setItem("mytime", "https://www.24h.com.vn");
 }
 </script>
 </body>
