--- a/Q_local_1.html
+++ b/Q_local_1.html
@@ -14,7 +14,7 @@ window.addEventListener("storage", myFunction);
 
 function myFunction(event) {
   //document.getElementById("demo").innerHTML = "A change was made in the storage area";
-  document.getElementById("demo").src = localStorage.getItem("mytime");
+  document.getElementById("the_iframe").src = localStorage.getItem("mytime");
   localStorage.removeItem("mytime");
 
 }
