--- a/Q_local_1.html
+++ b/Q_local_1.html
@@ -13,10 +13,10 @@
 window.addEventListener("storage", myFunction);
 
 function myFunction(event) {
-  //document.getElementById("demo").innerHTML = "A change was made in the storage area";
-  alert(localStorage.getItem("mytime"));
+  document.getElementById("demo").innerHTML = "A change was made in the storage area";
+  //alert(localStorage.getItem("mytime"));
   //document.getElementById("the_iframe").src = localStorage.getItem("mytime");
-  localStorage.removeItem("mytime");
+  //localStorage.removeItem("mytime");
 
 }
 
