--- a/Q_local_1.html
+++ b/Q_local_1.html
@@ -13,7 +13,7 @@
 window.addEventListener("storage", myFunction);
 
 function myFunction(event) {
-  document.getElementById("demo").innerHTML = "A change was made in the storage area";
+  document.getElementById("demo").innerHTML = "A change was made in the storage area: " + localStorage.getItem("mytime");
   //alert(localStorage.getItem("mytime"));
   //document.getElementById("the_iframe").src = localStorage.getItem("mytime");
   //localStorage.removeItem("mytime");
@@ -21,7 +21,7 @@ function myFunction(event) {
 }
 
 function changeValue() {
-  localStorage.setItem("mytime", "https://www.24h.com.vn");
+  localStorage.setItem("mytime", Date.now());
 }
 </script>
 </body>
