--- a/Q_local_2.html
+++ b/Q_local_2.html
@@ -15,7 +15,7 @@
 //}
 
 function changeValue() {
-  localStorage.setItem("mytime", Date.now());
+  localStorage.setItem("mytime", Date.now()+"|"+"https://www.24h.com.vn");
 }
 </script>
 </body>
