--- a/Q_local_1.html
+++ b/Q_local_1.html
@@ -13,10 +13,15 @@
 window.addEventListener("storage", myFunction);
 
 function myFunction(event) {
-  document.getElementById("demo").innerHTML = "A change was made in the storage area: " + localStorage.getItem("mytime");
+  //document.getElementById("demo").innerHTML = "A change was made in the storage area: " + localStorage.getItem("mytime");
   //alert(localStorage.getItem("mytime"));
   //document.getElementById("the_iframe").src = localStorage.getItem("mytime");
   //localStorage.removeItem("mytime");
+  var str = localStorage.getItem("mytime");
+  localStorage.removeItem("mytime");
+  
+  var arr = str.split("|");
+  document.getElementById("the_iframe").src = arr[1];
 
 }
 
