--- a/chat_2.html
+++ b/chat_2.html
@@ -48,7 +48,7 @@
 
           talk.innerText = str;
           // Add peer's message
-          if (message.value!="") {
+          if (str!="") {
             chophep = false;
           }
           
