--- a/chat_2.html
+++ b/chat_2.html
@@ -74,8 +74,9 @@
           
             
           daketnoi==true;
+          var  thoigian = Date.now() - begin;
           // Add peer's message
-          if (str!="" || (Date.now() - begin) > 2000) {
+          if (str!="" || thoigian > 2000) {
             chophep = false;
             daketnoi = false;
           }
