--- a/chat_2.html
+++ b/chat_2.html
@@ -63,7 +63,7 @@ async function receiveLoop() {
             if (y!="" && p!="") {
                 your_id.disabled = peer_id.disabled = true;
                 document.getElementById("btn").disabled = true;
-                while(chophep == true) {
+                while(true) {
                     try {
                         // Get peer's response
                         const res = await fetch(`https://ppng.io/${peer_id.value}-${your_id.value}`);
