--- a/chat_2.html
+++ b/chat_2.html
@@ -64,6 +64,7 @@ async function receiveLoop() {
             if (y!="" && p!="") {
                 your_id.disabled = peer_id.disabled = true;
                 document.getElementById("btn").disabled = true;
+                str = Date.now();
                 /*
                 while(true) {
                     try {
