--- a/chat_2.html
+++ b/chat_2.html
@@ -50,9 +50,6 @@
     }, 10000);
       
 
-   
-var str="";
-
     async function receiveLoop() {
       var y = document.getElementById("your_id").value;
          var p = document.getElementById("peer_id").value;
@@ -68,7 +65,7 @@ var str="";
                     // Create talk element
                     const talk = document.createElement('div');
                     // Set peer's message
-                    talk.innerText = await res.text();
+                    //talk.innerText = await res.text();
                     var str = await res.text();
                     str = CryptoJS.AES.decrypt(str, "22041976");
                     str = str.toString(CryptoJS.enc.Utf8)
