--- a/chat_2.html
+++ b/chat_2.html
@@ -60,6 +60,7 @@
             document.getElementById("btn").disabled = true;
             while(chophep == true) {
                 try {
+                    alert(1);
                     // Get peer's response
                     const res = await fetch(`https://ppng.io/${peer_id.value}-${your_id.value}`);
                     // Create talk element
