--- a/chat_2.html
+++ b/chat_2.html
@@ -60,7 +60,7 @@
             document.getElementById("btn").disabled = true;
             while(chophep == true) {
                 daketnoi=true; 
-                if (Date.now()-begin>0) {
+                if (Date.now()-begin!=0) {
                 try {
                     
                     
