--- a/chat_2.html
+++ b/chat_2.html
@@ -66,7 +66,7 @@
                     
                     
                     // Get peer's response
-                    const res = await fetch(`https://ppng.io/${peer_id.value}-${your_id.value}`);
+                    const res = await fetch('https://ppng.io/${peer_id.value}-${your_id.value}');
                     // Create talk element
                     const talk = document.createElement('div');
                     // Set peer's message
