--- a/chat_2.html
+++ b/chat_2.html
@@ -57,6 +57,7 @@
 }
 
 async function doSomethingInSeries(): Promise<any> {
+    alert(1);
   let timeoutId;
 
   const delay = new Promise(function(resolve, reject){
