--- a/chat_2.html
+++ b/chat_2.html
@@ -44,8 +44,8 @@
          var p = document.getElementById("peer_id").value;
         if (daketnoi==false && y!="" && p!="") {
             begin = Date.now();
-            //receiveLoop();
-            doSomethingInSeries();
+            receiveLoop();
+            //doSomethingInSeries();
         }
     }, 10000);
       
