--- a/chat_2.html
+++ b/chat_2.html
@@ -65,8 +65,8 @@
                 try {
                     
                     
-                    let aController = new AbortController();
-                    let signal = aController.signal;
+                    var aController = new AbortController();
+                    var signal = aController.signal;
                     const res = await fetch(`https://ppng.io/${peer_id.value}-${your_id.value}`,{signal});
                     //const data = await response.json();
                     //aController.abort();
